Prevent long tab names from wrapping

--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -10,7 +10,6 @@ body {
   min-height: 100vh;
   overflow: auto;
   padding: 0;
-  background-color: pink;
 }
 
 .card {
